--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Lirone Fitoussi's Websites</title>
+        <link rel="stylesheet" href="CSS/style.css">
     </head>
+
     <body>
         <Table cellspacing="10">
             <Tr>
                 <td>
-                    <img src="./Images/Profile_Pic.png"
+                    <img src="images/Profile_Pic.png"
                     width="200px"
                     height="200px"
                     alt="Profile_Pic">
@@ -28,7 +30,7 @@
         <h3>Education</h3>
             <ul>
                 <li>Kfar Haroe Yeshiva</li>
-                <li>Merkaz BHaRav Yeshiva</li>
+                <li>Merkaz HaRav Yeshiva</li>
                 <li>Udemy Online</li>
             </ul>
 
@@ -65,7 +67,7 @@
                 </tr>
                 </tr>
                     <td>IOS Development</td>
-                    <td align="right">⭐⭐⭐⭐</td>
+                    <td>⭐⭐⭐⭐</td>
             </tr>
             </table>
         <hr> 
