--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <Table cellspacing="10">
             <Tr>
                 <td>
-                    <img src="images/Profile_Pic.png"
+                    <img src="./images/Profile_Pic.png"
                     width="200px"
                     height="200px"
                     alt="Profile_Pic">
